--- a/DiscordPlus.theme.css
+++ b/DiscordPlus.theme.css
@@ -40,7 +40,7 @@
 
 /* If you use light theme, you can give it unique settings that are separate from dark theme. */
 .theme-light {
-  --dplus-backdrop: url(https://i.imgur.com/3AiL3yN.png);
+  --dplus-backdrop: url(https://i.postimg.cc/jS3nzpS8/53d5dfdf-6929-4f31-92ec-ff11e9d6af0a.png);
   
   --dplus-accent-color-hue: 320;
   --dplus-accent-color-saturation: 60%;
